@@ -1,0 +1,63 @@
+<h1>東京8月熱浪來襲！15個超級夏日活動等你來</h1>
+<p>東京8月熱浪來襲！15個超級夏日活動等你來</p>
+<p></p>
+<p>炎炎夏日，正是享受傳統舞蹈節慶的最佳時機！本週最受歡迎的活動是高円寺阿波舞（Kōenji Awa Odori），其次是原宿表參道超級夜來祭（Harajuku Omotesando Super Yosakoi）。如果你想悠閒地度過夏日，可以前往當地的盆踊會或加入六本木希爾斯的熱鬧人群。</p>
+<p></p>
+<p>高円寺阿波舞節慶</p>
+<p></p>
+<p>在高円寺的封閉街道上舉行的夏日節慶，將為您帶來傳統舞蹈派對的樂趣。高円寺阿波舞節慶將在兩天內進行大量的舞蹈表演，從下午5點開始，直到晚上8點結束。</p>
+<p></p>
+<p>原宿表參道超級夜來祭</p>
+<p></p>
+<p>這個活動將在原宿/表參道地區舉行，舞蹈團隊將在這裡進行比賽。這個大型舞蹈節慶將有6,000名表演者參加，來自日本各地的舞蹈團隊將爭奪冠軍。</p>
+<p></p>
+<p>六本木希爾斯盆踊會</p>
+<p></p>
+<p>六本木希爾斯的舞台將被和服裝扮的盆舞表演者佔據。這個節慶有一個獨特的舞蹈——六本木音頭（Ropponjin Ondo），大致翻譯為六本木工人的舞蹈。</p>
+<p></p>
+<p>中央區大江戶盂蘭盆舞大會</p>
+<p></p>
+<p>日本的夏季不完整沒有盆踊——這種傳統舞蹈，參與者圍繞著豎立的塔，同步移動。這個節慶還包括日本民間音樂、傳統藝術和工藝品工作坊，以及與當地居民一起表演的藝術。</p>
+<p></p>
+<p>江戶川區花火大会</p>
+<p></p>
+<p>江戶川區花火大会已經舉辦了近50年，是東京較早的花火節慶之一。你可以從江戶川的兩岸觀賞煙花表演。由於人潮眾多，部分地區將提前關閉。</p>
+<p></p>
+<p>調布夜來祭</p>
+<p></p>
+<p>調布夜來祭將呈現精彩的高能量舞蹈表演。除了舞蹈，還有豐富的節慶美食，包括關東煮、刨冰、烤魷魚、炸麵條和棉花糖，以及軟性飲料和啤酒。</p>
+<p>東京8月熱浪來襲！15個超級夏日活動等你來</p>
+<p></p>
+<p>炎炎夏日，東京的熱浪來襲！但不要讓炎熱的天氣阻礙你享受夏日的樂趣。東京有許多夏日活動等你來，讓你體驗不同的夏日風情。</p>
+<p></p>
+<p>** Shimokitazawa Night Flea Market **</p>
+<p></p>
+<p>在 Shimokitazawa 這個潮流市場中，尋找你的下一個隱藏寶藏。這裡的商品注重高品質，所以價格可能會比較高。但你也會找到一些獨一無二的商品，無法在其他地方找到。另外，還有咖啡館和食物卡車提供休息的場所。</p>
+<p></p>
+<p>** 讀賣巨人棒球賽在東京巨蛋 **</p>
+<p></p>
+<p>在東京巨蛋中，讀賣巨人隊在主場比賽，氣氛熱烈。日本的棒球賽是一種獨特的體驗，不論你支持哪一隊。</p>
+<p></p>
+<p>** Sancha 夏日祭和拉丁節 **</p>
+<p></p>
+<p>在Sangenjaya（也稱為Sancha或Sanja）舉行的這個為期兩天的慶祝活動，包括現場表演、精彩的服裝和良好的氣氛。主事件是星期日的桑巴遊行，將於8月25日下午1:30至4:00在Chazawa街舉行。</p>
+<p></p>
+<p>** 用賀夏祭 **</p>
+<p></p>
+<p>在這個當地的祭典中，各個年齡段的人都會在舞台上唱歌和跳舞，還會有時裝秀。手工藝品將被出售，還有許多兒童遊戲設置。</p>
+<p></p>
+<p>** 東京大塚阿波おどり **</p>
+<p></p>
+<p>超過1000名表演者在南大塚街上跳舞，Shinshi-ren舞蹈團以其強有力的舞蹈風格進行開幕式。當地居民各個年齡段都參與其中，展現社區精神。</p>
+<p></p>
+<p>** 下北澤盆踊祭 **</p>
+<p></p>
+<p>下北澤是一個緊密但非常歡迎的社區，所以這個祭典（以前稱為下北澤夏日祭）吸引了當地居民和許多潮流社區的粉絲。</p>
+<p></p>
+<p>** 昭島市民鯨祭 **</p>
+<p></p>
+<p>這個節日在昭和公園（田徑場）舉行，包括煙花和大鯨魚遊行。亮點包括一頭巨大的鯨魚被推過街道和星期六晚上的煙花表演。</p>
+<p></p>
+<p>** 麻布十番納涼まつり **</p>
+<p></p>
+<p>雖然“納涼”意味著“涼爽的晚上”，但這個節日是在八月最後一個周末在時尚的麻布十番社區舉行的，全部是關於美食。</p>
