@@ -7,3 +7,4 @@ https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-asakusa
 https://tokyocheapo.com/editorial/biggest-fears-japan/
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-disaster-prevention-and-last-chance-exhibitions/
 https://tokyocheapo.com/entertainment/tokyo-events-september/
+https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-koenji-awa-odori-roppongi-bon-odori-and-fireworks/
